Add support for development keys and update entrypoint script
- Introduced /devkeys folder for storing development SSH key pairs.
- Updated .gitignore to prevent accidental commits of development keys.
- Modified entrypoint.sh to copy SSH keys from /keys to /etc/ssh.
- Configured SSH host keys to ensure they exist before starting the service.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ __pycache__/
 *.db
 *.sqlite
 *.log
+
+# Ddon't commit the dev keys. They are only used for local development and testing.
+/devkeys/
